# rpg

./: .gitignore  .infisical.json  Dockerfile  README.md
.sqlx/: query-43ba774e558a4a0858489facd27a3a8b0975a1380095c0b4e587a666eb17b526.json  query-8e80135b82dd8e94736b463df2789648c5b6f7bc4cd0ab5493873bd2b5bed166.json  query-95c58cb248514837ede2014e9df47dd0c86b88826aab71a7d308c3c3274b61e9.json  query-988c58c94e050b7ac1d6c8a8a3e35a4f784a38b59b906e6c9621df94d6d843cb.json  query-a4bfa3703fa2a1b78c545cccb045071fd5e54dbab5acd0aad7081b68a65bec18.json  query-bd221344135824116837dda8a9e6fc31911383a1fa486e9e74f961988d89f81c.json  query-df3ab69ec5e09ca04fe8555e0d06f49ed27cc47afe27bc3b97f0031c832d887b.json
crates/api/: Cargo.toml
crates/api/src/: auth_middleware.rs  lib.rs  router.rs
crates/api/src/endpoints/: banking.rs  core.rs
crates/domain/: Cargo.toml
crates/domain/src/: banking.rs  core.rs  lib.rs
db/: auth.sql  core-schema.sql  schema.sql
frontend/: README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/home/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/section/[id]/: page.tsx
frontend/app/topic/[id]/: layout.tsx  page.tsx
frontend/components/: Button.tsx  HankoAuth.tsx  Tiptap.tsx  hanko.css
frontend/components/navigation/: GoTo.tsx  Logout.tsx  Navbar.tsx  navbar.css
frontend/components/pageSections/: Mural.tsx  RegrasETutoriais.tsx  index.tsx
frontend/components/ui/: table.tsx
